--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -10,19 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@emotion/native": "^11.0.0",
     "@emotion/react": "^11.5.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "graphql": "^16.0.1",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-native-svg-transformer": "^0.14.3",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
