--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -32,10 +32,19 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^17.0.34",
     "@types/react-native": "^0.66.2",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.26.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "2.4.1",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
