--- a/sleepy_mobile/android/app/build.gradle
+++ b/sleepy_mobile/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "com.android.application"
+// ! Add this line
+apply plugin: 'com.android.application'
 
 import com.android.build.OutputFile
 
@@ -192,6 +194,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    // ! Add this line
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
