--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -13,10 +13,17 @@
     "@apollo/client": "^3.4.16",
     "@emotion/native": "^11.0.0",
     "@emotion/react": "^11.5.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/auth": "^13.0.1",
+    "@react-native-firebase/database": "^13.0.1",
+    "@react-native-firebase/firestore": "^13.0.1",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "apollo-upload-client": "^16.0.0",
     "graphql": "^16.0.1",
     "react": "17.0.2",
     "react-native": "0.66.2",
