--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -26,6 +26,7 @@
     "@types/apollo-upload-client": "^14.1.0",
     "apollo-upload-client": "^16.0.0",
     "graphql": "^16.0.1",
+    "graphql-request": "^3.6.1",
     "iamport-react-native": "^2.0.0-rc.1",
     "react": "17.0.2",
     "react-native": "0.66.2",
