--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -28,6 +28,7 @@
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
     "iamport-react-native": "^2.0.0-rc.1",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-gesture-handler": "^1.10.3",
@@ -41,6 +42,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/lodash": "^4.14.176",
     "@types/react": "^17.0.34",
     "@types/react-native": "^0.66.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
