--- a/sleepy_web_admin/package.json
+++ b/sleepy_web_admin/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.4.17",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.1.0",
     "antd": "^4.16.13",
@@ -20,7 +21,10 @@
     "graphql": "^15.7.2",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.5",
+    "react-quill": "^1.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.2.2",
