--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -29,6 +29,7 @@
     "graphql-request": "^3.6.1",
     "iamport-react-native": "^2.0.0-rc.1",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^4.1.3",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-gesture-handler": "^1.10.3",
