--- a/sleepy_web_admin/package.json
+++ b/sleepy_web_admin/package.json
@@ -15,6 +15,9 @@
     "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.1.0",
+    "@nivo/core": "^0.74.0",
+    "@nivo/line": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
     "antd": "^4.16.13",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.24.0",
