--- a/sleepy_mobile/android/app/build.gradle
+++ b/sleepy_mobile/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 // ! Add this line
 apply plugin: 'com.android.application'
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
 
