--- a/sleepy_mobile/package.json
+++ b/sleepy_mobile/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@types/apollo-upload-client": "^14.1.0",
+    "@types/react-native-vector-icons": "^6.4.10",
     "apollo-upload-client": "^16.0.0",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
@@ -39,6 +40,7 @@
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.14.2"
   },
   "devDependencies": {
