--- a/sleepy_web_admin/package.json
+++ b/sleepy_web_admin/package.json
@@ -23,11 +23,13 @@
     "antd": "^4.16.13",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.24.0",
+    "dompurify": "^2.3.3",
     "graphql": "^15.7.2",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-modal": "^3.14.4",
     "react-quill": "^1.3.5",
     "yup": "^0.32.11"
   },
