--- a/sleepy_web_admin/package.json
+++ b/sleepy_web_admin/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-infinite-scroller": "^1.2.4",
     "react-modal": "^3.14.4",
     "react-quill": "^1.3.5",
     "yup": "^0.32.11"
