--- a/sleepy_web_admin/package.json
+++ b/sleepy_web_admin/package.json
@@ -28,6 +28,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.19.5",
     "react-infinite-scroller": "^1.2.4",
     "react-modal": "^3.14.4",
